--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,10 +1,46 @@
+* {
+    font-family: JetBrainsMono, FontAwesome;
+    font-size: 13px;
+    font-weight: bold;
+}
 
+window#waybar {
+    background-color: rgba(43, 48, 59, 0.5);
+    padding: 0px 15px 0px 15px;
+    margin: 0px 10px;
+    border-radius: 10px;
+}
 
-
-
-
+window#waybar.hidden {
+    opacity: 0.2;
+}
 
 #custom-menu {
-    background-image: url('~/.config/waybar/logo.svg');
+    background-image: url('/home/maksym/.config/waybar/logo.svg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    color: @cyan;
+    padding: 0 6px;
+    margin: 5px 20px;
 
+}
+
+
+#clock,
+#battery,
+#cpu,
+#memory,
+#temperature,
+#backlight,
+#network,
+#pulseaudio,
+#tray,
+#mpd {
+    padding: 0 10px;
+    color: #ffffff;
+}
+
+#clock {
+    background-color: #64727D;
 }
